@@ -781,7 +781,7 @@ static struct tag *prot_tag;
 #define PROT_FUNC   -1
 #define PROT_THREAD -2
 
-#define EXEC_TAG()    setjmp(prot_tag->buf)
+#define EXEC_TAG()    (FLUSH_REGISTER_WINDOWS, setjmp(prot_tag->buf))
 
 #define JUMP_TAG(st) {			\
     ruby_frame = prot_tag->frame;	\
@@ -4234,7 +4234,7 @@ stack_length(p)
 #endif
     if (p) *p = STACK_END;
 
-#ifdef __sparc__
+#if defined(sparc) || defined(__sparc__)
     return rb_gc_stack_start - STACK_END + 0x80;
 #else
     return (STACK_END < rb_gc_stack_start) ? rb_gc_stack_start - STACK_END
@@ -7490,7 +7490,8 @@ thread_switch(n)
 }
 
 #define THREAD_SAVE_CONTEXT(th) \
-    (rb_thread_save_context(th),thread_switch(setjmp((th)->context)))
+    (rb_thread_save_context(th),\
+     thread_switch((FLUSH_REGISTER_WINDOWS, setjmp((th)->context))))
 
 static void rb_thread_restore_context _((rb_thread_t,int));
 
